# evo

./: pyproject.toml
evo/: align.py  dataset.py  hhsuite.py  parsing.py
