[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evo"
version = "0.0.1"
description = "A monorepo for protein utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "tqdm",
    "biopython",
    "numba",
    "pyarrow",
    "matplotlib",
    "transformers",
    "tape-proteins @ git+https://github.com/songlab-cal/tape@master",
    "fair-esm @ git+https://github.com/facebookresearch/esm@main",
    # --------- Development Tools --------- #
    "rich",
    "rootutils",
    "abnumber>=0.4.4",
    "pre-commit>=4.2.0",
    "netam>=0.2.1",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=7.4.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["evo*"]

[tool.uv.sources]
netam = { git = "https://github.com/matsengrp/netam.git" }

[tool.black]
line-length = 100
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

